dev-configs/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    meta.helm.sh/release-name: backend
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2025-04-26T17:08:08Z"
  labels:
    app: backend
    app.kubernetes.io/managed-by: Helm
  name: backend-svc
  namespace: default
  resourceVersion: "6833092"
  uid: 377ecbad-4da3-4aec-a243-16155158a94f
spec:
  clusterIP: 34.118.236.4
  clusterIPs:
  - 34.118.236.4
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: backend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
