dev-configs/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    meta.helm.sh/release-name: frontend
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2025-05-02T14:30:12Z"
  labels:
    app: frontend
    app.kubernetes.io/managed-by: Helm
  name: frontend-svc
  namespace: default
  resourceVersion: "12433965"
  uid: 635aed66-1e9f-473f-9237-7bd4e5059277
spec:
  clusterIP: 34.118.231.0
  clusterIPs:
  - 34.118.231.0
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: frontend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
