dev-configs/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    meta.helm.sh/release-name: kube-prometheus-stack
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2025-04-27T14:09:35Z"
  labels:
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 11.6.0
    helm.sh/chart: grafana-8.12.1
  name: kube-prometheus-stack-grafana
  namespace: default
  resourceVersion: "7665377"
  uid: 2959a5ec-a791-4533-af5d-3e9b655ab153
spec:
  clusterIP: 34.118.225.40
  clusterIPs:
  - 34.118.225.40
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-web
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/name: grafana
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
