dev-configs/ingress-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    meta.helm.sh/release-name: ingress-controller
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2025-04-29T18:36:32Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nginx-ingress-controller
    app.kubernetes.io/version: 1.12.1
    helm.sh/chart: nginx-ingress-controller-11.6.15
  name: ingress-controller-nginx-ingress-controller
  namespace: default
  resourceVersion: "9744420"
  uid: 2fe62fa9-c841-4713-9bcd-ef355ce9b4fd
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 34.118.228.3
  clusterIPs:
  - 34.118.228.3
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    nodePort: 32581
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    nodePort: 30711
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-controller
    app.kubernetes.io/name: nginx-ingress-controller
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 34.79.160.113
      ipMode: VIP
