dev-configs/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      meta.helm.sh/release-name: ingress-rules
      meta.helm.sh/release-namespace: default
      nginx.ingress.kubernetes.io/auth-realm: Authentication Required
      nginx.ingress.kubernetes.io/auth-secret: nginx-ingress-basic-auth-secrets
      nginx.ingress.kubernetes.io/auth-type: basic
    creationTimestamp: "2025-04-27T13:33:46Z"
    generation: 2
    labels:
      app.kubernetes.io/managed-by: Helm
    name: nginx-ingress-ingress
    namespace: default
    resourceVersion: "12519102"
    uid: b0807184-46e6-43c7-9597-79e966c54619
  spec:
    ingressClassName: nginx
    rules:
    - http:
        paths:
        - backend:
            service:
              name: frontend-svc
              port:
                number: 3000
          path: /
          pathType: Prefix
        - backend:
            service:
              name: backend-svc
              port:
                number: 8000
          path: /backend
          pathType: Prefix
        - backend:
            service:
              name: kube-prometheus-stack-grafana
              port:
                number: 80
          path: /grafana
          pathType: Prefix
        - backend:
            service:
              name: kube-prometheus-stack-prometheus
              port:
                number: 9090
          path: /prometheus
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 34.78.171.229
kind: List
metadata:
  resourceVersion: ""
