dev-configs/prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    meta.helm.sh/release-name: kube-prometheus-stack
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2025-04-27T14:09:35Z"
  labels:
    app: kube-prometheus-stack-prometheus
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kube-prometheus-stack
    app.kubernetes.io/version: 70.7.0
    chart: kube-prometheus-stack-70.7.0
    heritage: Helm
    release: kube-prometheus-stack
    self-monitor: "true"
  name: kube-prometheus-stack-prometheus
  namespace: default
  resourceVersion: "7665371"
  uid: 07636e1b-d7e0-4e44-b7fe-edb821e59932
spec:
  clusterIP: 34.118.226.159
  clusterIPs:
  - 34.118.226.159
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-web
    port: 9090
    protocol: TCP
    targetPort: 9090
  - appProtocol: http
    name: reloader-web
    port: 8080
    protocol: TCP
    targetPort: reloader-web
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: kube-prometheus-stack-prometheus
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
